fix: 프로필 포트폴리오 보조 이미지 및 대표 이미지 수정 로직 변경